[package]
name = "rust-nft-generator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
serde = { version = "1.0.104", features = ["derive"] }
serde_json = "1.0.93"
rand = "0.8.5"
image = "0.24.1"
rayon = "1.5.1"
walkdir = "2.3.2"
regex = "1.9.1"
strsim = "0.10.0"
lazy_static = "1.4.0"

[dev-dependencies]
tempfile = "3.2.0"
